Site Folclore chinês

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <h1>Introdução ao Folclore Chinês</h1>
     </header>
     <nav>
-        <a href="">Início</a>
-        <a href="">História</a>
-        <a href="">Cultura</a>
-        <a href="">Lendas</a>
-        <a href="">Contato</a>
+        <a href="index.html">Início</a>
+        <a href="historia.html">História</a>
+        <a href="cultura.html">Cultura</a>
+        <a href="lendas.html">Lendas</a>
+        <a href="contato.html">Contato</a>
     </nav>
     <main>
         <!--1: O que é o folclore chinês? -->
@@ -44,11 +44,11 @@
             <p>Além disso, o folclore chinês influenciou profundamente a literatura e as artes. Clássicos como "A Jornada ao Oeste" e "O Romance dos Três Reinos" são repletos de elementos folclóricos, como seres míticos, magia e lições morais. Essas obras continuam a inspirar adaptações modernas em filmes, séries e quadrinhos.</p>
             <p>Em resumo, o folclore chinês é um tesouro cultural que une o passado e o presente, oferecendo uma visão profunda da história, dos valores e da criatividade do povo chinês.</p>
         </section>
+    </main>
 
-
-<footer>
-    By JG
-</footer>
+        <footer>
+            <p>By JG</p>
+        </footer>
 
 </body>
 </html>
