--- a/contato.html
+++ b/contato.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="contato.css">
 </head>
 <body>
+
+    <header>
+        <h1>Contato</h1>
+    </header>
+
     
     <nav>
         <a href="index.html">Início</a>
